syntax = "proto3";

package grpcpb2;

message Empty {}